# llmgauge

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARTIFACT_SCHEMAS.md  BASELINE_CHECKS.md  CLEAN_CLONE_TESTING.md  DESIGN.md  EVALUATION_TIERS.md  EVAL_BUDGETS.md  FIT_LADDER.md  FIT_LADDER_REAL_WORKFLOW_EVIDENCE.md  GEMMA4_12B_NVFP4_CPU_OFFLOAD_EVIDENCE.md  INSTALL.md  LOCAL_MODEL_TESTING.md  MIGRATION_FROM_QUANT_LAB.md  MODEL_BATCHES.md  MONOLITH_BRIDGE_CONTRACT.md  MONOLITH_IMPORT_EXAMPLE.md  PRACTICAL_EVAL_V1.md  PRACTICAL_SUITE_V1_CONTRACT.md  PUBLICATION_CHECKLIST.md  PUBLIC_REPORTING.md  QUICKSTART.md  RESULT_SCHEMA_V0.md  RESULT_VALIDATION_V0.md  ROADMAP.md  SCORED_COMPARISONS.md  SCORING_RUBRICS.md  SUITE_FORMAT_V0.md  SUITE_STRATEGY.md  USAGE.md  V016_AGENT_BACKEND_SCORING_NOTES.md  V016_CORE_V1_SCORING_NOTES.md  V016_REAL_SMOKE_NOTES.md  VLLM_CROSS_RUNTIME_COMPARISON_EVIDENCE.md  VLLM_CROSS_RUNTIME_COMPARISON_METHODOLOGY.md  VLLM_CROSS_RUNTIME_SECOND_PROMPT_EVIDENCE.md  VLLM_FINGERPRINT_LIVE_SMOKE_EVIDENCE.md  VLLM_HTTP_TRANSPORT_ASSESSMENT.md  VLLM_LIVE_SMOKE_EVIDENCE.md  VLLM_RUNTIME_CONTRACT.md  VRAM_CAPTURE.md
tests/: conftest.py  test_baseline.py  test_batch.py  test_batch_validation.py  test_canonical_identity.py  test_cli_baseline.py  test_cli_doctor.py  test_cli_fit_ladder.py  test_cli_model_commands.py  test_cli_model_onboarding.py  test_cli_public_export.py  test_cli_run_paths.py  test_cli_runtime_metadata.py  test_cli_scoring.py  test_cli_setup.py  test_cli_smoke.py  test_compare.py  (+31 more)
(+165 files in other folders)
